fix: scrollbar

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -39,9 +39,8 @@ a {
 }
 
 *::-webkit-scrollbar {
-  width: 0;
+  width: 1px;
 }
-
 
 body {
   background-color: #f5f7fa;
